k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: 692609349536.dkr.ecr.ap-northeast-2.amazonaws.com/dynamodb-example:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
